--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -36,19 +36,9 @@
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <TextView
+        <EditText
             android:id="@+id/menu_price"
-            android:layout_width="59dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/table_temp"
-            android:fontFamily="@font/nanumsquareneo_variable"
-            android:gravity="center"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/menu_sort"
-            android:layout_width="44dp"
+            android:layout_width="58dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
             android:fontFamily="@font/nanumsquareneo_variable"
@@ -57,8 +47,18 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/menu_sort"
+            android:layout_width="75dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/table_temp"
+            android:fontFamily="@font/nanumsquareneo_variable"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <TextView
             android:id="@+id/menu_status"
-            android:layout_width="67dp"
+            android:layout_width="53dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
             android:fontFamily="@font/nanumsquareneo_variable"
@@ -68,7 +68,7 @@
 
         <TextView
             android:id="@+id/menu_image"
-            android:layout_width="103dp"
+            android:layout_width="87dp"
             android:layout_height="match_parent"
             android:background="@drawable/table_temp"
             android:fontFamily="@font/nanumsquareneo_variable"
