--- a/app/src/main/res/layout/activity_small_menu_page1_1.xml
+++ b/app/src/main/res/layout/activity_small_menu_page1_1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".small_menu_page">
+    tools:context=".small_menu_page1_1">
 
 
     <androidx.constraintlayout.widget.Guideline
