--- a/app/src/main/res/layout-land/activity_pay_page.xml
+++ b/app/src/main/res/layout-land/activity_pay_page.xml
@@ -37,7 +37,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/small_menu_name"
+                android:id="@+id/user_shop_name"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:gravity="center"
