--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -46,8 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/btn_Customer_main_page"
+        app:layout_constraintStart_toStartOf="@+id/btn_Customer_main_page"
         app:layout_constraintTop_toTopOf="@+id/guideline11"
         app:srcCompat="@drawable/kobbtext" />
 
@@ -70,7 +70,8 @@
         android:inputType="textPersonName"
         android:shadowColor="#3A3838"
         android:textColorHint="#504E4E"
-        android:textSize="24sp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/login_user_pw"
         app:layout_constraintEnd_toEndOf="@+id/login_user_pw"
         app:layout_constraintStart_toStartOf="@+id/login_user_pw"
         app:layout_constraintTop_toBottomOf="@+id/imageView19" />
@@ -100,16 +101,17 @@
         android:layout_width="0dp"
         android:layout_height="80dp"
         android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@android:color/transparent"
         android:ems="10"
         android:fontFamily="@font/nanumsquareneo_variable"
         android:hint="비밀번호를 입력하세요"
         android:inputType="textPassword"
         android:textColorHint="#504E4E"
-        android:textSize="24sp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_Customer_main_page"
         app:layout_constraintEnd_toEndOf="@+id/btn_Customer_main_page"
-        app:layout_constraintStart_toEndOf="@+id/imageView8"
-        app:layout_constraintTop_toBottomOf="@+id/login_user_id" />
+        app:layout_constraintStart_toEndOf="@+id/imageView8" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline11"
